--- a/ch1.tex
+++ b/ch1.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2022 Carl Martin Ludvig Sinander.
+% Copyright (c) 2023 Carl Martin Ludvig Sinander.
 
 % This program is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
@@ -1190,7 +1190,7 @@ that is, her preferences among lotteries $\ell$ that all assign the good for sur
 and also among those that certainly do not ($\ell( \{0\} \times \R ) = 1$).
 The agent's marginal preferences are risk-neutral (risk-averse)
 iff $u(0,\cdot)$ and $u(1,\cdot)$ are both affine (concave).
-In this case, we shall say that `the agent is risk-averse (risk-neutral)'.
+In this case, we shall say that `the agent is risk-neutral (risk-averse)'.
 
 EU preferences are \emph{monotone} iff $u(g,p)$ is strictly increasing in $g$ and strictly decreasing in $p$,
 and \emph{strongly separable} iff $u$ is additively separable:
