--- a/ch3.tex
+++ b/ch3.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2022 Carl Martin Ludvig Sinander.
+% Copyright (c) 2023 Carl Martin Ludvig Sinander.
 
 % This program is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
@@ -267,20 +267,26 @@ The IID assumption can be relaxed by using a fancier strong law of large numbers
 			&= (h-c) Q_\delta
 			- \Bigl[
 			h \min\{K,Q_\delta\}
-			+ \ell \min\{K-Q_\delta,0\}
+			+ \ell \max\{K-Q_\delta,0\}
 			- c K 
 			\Bigr]
 			\\
 			&= (h-c) Q_\delta
-			+ \Bigl[
-			h \max\{-K,-Q_\delta\}
-			+ \ell \max\{Q_\delta-K,0\}
-			+ c K 
+			- \Bigl[
+			- h \max\{-K,-Q_\delta\}
+			+ \ell \max\{K-Q_\delta,0\}
+			- c K 
 			\Bigr]
 			\\
-			&= (h+\ell) \max\{Q_\delta-K,0\}
-			- c (Q_\delta-K) .			
-		\end{aligned}		
+			&= (h-c) Q_\delta
+			- \Bigl[
+			- (h-\ell) \max\{K-Q_\delta,0\}
+			+ (h-c)K
+			\Bigr]
+			\\
+			&= - (h-c) ( K - Q_\delta )
+			+ (h-\ell) \max\{K-Q_\delta,0\} .			
+		\end{aligned}
 	\end{multline*}
 	%
 	For $K=p$,
