--- a/ms.tex
+++ b/ms.tex
@@ -67,7 +67,7 @@
 \author{Ludvig Sinander \\
 University of Oxford}
 
-\date{\small This version: 13 April 2023}
+\date{\small This version: 21 May 2023}
 
 % \date{\emph{version:} {\datestyle\today} at {\currenttime} \\ \hspace{0pt} \\ \hspace{0pt} \\ \bfseries please report typos!}
 
@@ -124,7 +124,7 @@ Visit \href{https://www.gnu.org/licenses/copyleft}{gnu.org/licenses/copyleft} to
 
 These are the notes for a second-year graduate course that I taught at Oxford in the autumns of 2021 and 2022.
 Thanks to Gregorio Curello, Deniz Kattwinkel, Elliot Lipnowski, Qingmin Liu, Alex Teytelboym and to my students for comments, suggestions and insights,
-and to Catharina Behrens, Josh le Cornu, Tanxin Gao, Brooklyn Han, Simon Handreke, Sanjari Kalantri, Marie Kaul, Arvo Munoz Moran, Filip Tokarski, Gautam Vyas and Yidan Xu for reporting errors.
+and to Catharina Behrens, Josh le Cornu, Tanxin Gao, Brooklyn Han, Simon Handreke, Sanjari Kalantri, Marie Kaul, Nils Lager, Arvo Munoz Moran, Filip Tokarski, Gautam Vyas and Yidan Xu for reporting errors.
 
 
 
