--- a/bibl.bib
+++ b/bibl.bib
@@ -220,6 +220,28 @@ published papers
 	doi			= "10.2307/1911050",
 }
 
+@article{BallKattwinkel2023comment,
+	author		= "Ian Ball and Deniz Kattwinkel",
+	year		= "2023",
+	title		= "Corrigendum to ``{R}ole of linking mechanisms in multitask agency with hidden information'' [{J}. {E}con. {T}heory 145 (2010) 2241--2259]",
+	journaltitle= jet,
+	volume		= "210",
+	langid		= "american",
+	doi			= "10.1016/j.jet.2023.105666",
+}
+
+@article{BallJacksonKattwinkel2022,
+	author		= "Ian Ball and Matt O. Jackson and Deniz Kattwinkel",
+	year		= "2022",
+	title		= "Comment on {J}ackson and {S}onnenschein (2007) ``{O}vercoming incentive constraints by linking decisions''",
+	journaltitle= ecta,
+	volume		= "90",
+	number		= "4",
+	pages		= "3--7",
+	langid		= "american",
+	doi			= "10.3982/ECTA20516",
+}
+
 @article{BaronBesanko1984,
 	author		= "David P. Baron and David Besanko",
 	year		= "1984",
@@ -351,6 +373,16 @@ published papers
 	pages		= "324--340",
 	langid		= "american",
 	doi			= "10.1016/j.jet.2006.08.005",
+}
+
+@article{BlochDuttaDziubinski2021,
+	author		= "Francis Bloch and Bhaskar Dutta and Marcin Dziubi\'{n}ski",
+	year		= "2023",
+	title		= "Selecting a winner with external referees",
+	journaltitle= jet,
+	volume		= "211",
+	langid		= "american",
+	doi			= "10.1016/j.jet.2023.105687",
 }
 
 @article{BoardSkrzypacz2016,
@@ -931,6 +963,18 @@ published papers
 	doi			= "10.1257/aer.20141215",
 }
 
+@article{GuoShmaya2022,
+	author		= "Yingni Guo and Eran Shmaya",
+	year		= "2023",
+	title		= "Regret-minimizing project choice",
+	journaltitle= ecta,
+	volume		= "91",
+	number		= "5",
+	pages		= "1567--1593",
+	langid		= "american",
+	doi			= "10.3982/ECTA20157",
+}
+
 @article{GuttmanKremerSkrzypacz,
 	author		= "Ilan Guttman and Ilan Kremer and Andrzej Skrzypacz",
 	year		= "2014",
@@ -1145,7 +1189,7 @@ published papers
 	author		= "Boyan Jovanovic",
 	year		= "1982",
 	title		= "Truthful disclosure of information",
-	journaltitle= bell,
+	journaltitle= "Bell Journal of Economics",
 	volume		= "13",
 	number		= "1",
 	pages		= "36--44",
@@ -1175,6 +1219,19 @@ published papers
 	pages		= "323--355",
 	langid		= "american",
 	doi			= "10.3982/TE723",
+}
+
+@article{KattwinkelKnoepfle2022,
+	author		= "Deniz Kattwinkel and Jan Knoepfle",
+	year		= "2023",
+	title		= "Costless information and costly verification",
+	subtitle	= "A case for transparency",
+	journaltitle= jpe,
+	volume		= "131",
+	number		= "2",
+	pages		= "504--548",
+	langid		= "american",
+	doi			= "10.1086/721618",
 }
 
 @article{Kirkegaard2006,
@@ -1442,7 +1499,7 @@ published papers
 	year		= "1981",
 	title		= "Good news and bad news",
 	subtitle	= "Representation theorems and applications",
-	journaltitle= bell,
+	journaltitle= "Bell Journal of Economics",
 	volume		= "12",
 	number		= "2",
 	pages		= "380--391",
@@ -1765,6 +1822,18 @@ published papers
 	doi			= "10.1006/jeth.1994.1066",
 }
 
+@article{Sinander2022,
+	author		= "Ludvig Sinander",
+	year		= "2022",
+	title		= "The converse envelope theorem",
+	journaltitle= ecta,
+	volume		= "90",
+	number		= "6",
+	pages		= "2795--2819",
+	langid		= "american",
+	doi			= "10.3982/ECTA18119",
+}
+
 @article{SpearSrivastava1987,
 	author		= "Stephen E. Spear and Sanjay Srivastava",
 	year		= "1987",
@@ -1856,35 +1925,28 @@ working papers
 
 @unpublished{sfb,
 	author		= "Gregorio Curello and Ludvig Sinander",
-	year		= "2021",
+	year		= "2023",
 	title		= "Screening for breakthroughs",
-	note		= "working paper, 22 Nov 2021",
+	note		= "working paper, 12 Jun 2023",
 	langid		= "american",
 	doi			= "10.48550/arXiv.2011.10090",
 }
 
-@unpublished{BallJacksonKattwinkel2022,
-	author		= "Ian Ball and Matt O. Jackson and Deniz Kattwinkel",
-	year		= "2022",
-	title		= "Comment on {J}ackson and {S}onnenschein (2007) ``{O}vercoming incentive constraints by linking decisions''",
-	note		= "working paper, 9 May 2022",
+@unpublished{BallKattwinkel2023,
+	author		= "Ian Ball and Deniz Kattwinkel",
+	year		= "2023",
+	title		= "Linking mechanisms",
+	subtitle	= "Limits and robustness",
+	note		= "working paper, 14 Sep 2023",
 	langid		= "american",
-	doi			= "10.48550/arXiv.2205.03352",
+	doi			= "10.48550/arXiv.2309.07363",
 }
 
 @unpublished{BenporathDekelLipmanInprogress,
 	author		= "Elchanan Ben-Porath and Eddie Dekel and Barton L. Lipman",
-	year		= "2021",
+	year		= "2023",
 	title		= "Sequential mechanisms for evidence acquisition",
-	note		= "work in progress",
-	langid		= "american",
-}
-
-@unpublished{BlochDuttaDziubinski2021,
-	author		= "Francis Bloch and Bhaskar Dutta and Marcin Dziubi\'{n}ski",
-	year		= "2022",
-	title		= "Selecting a winner with impartial referees",
-	note		= "working paper, March 2022",
+	note		= "working paper, Jun 2023",
 	langid		= "american",
 }
 
@@ -1954,19 +2016,11 @@ working papers
 	langid		= "american",
 }
 
-@unpublished{GuoShmaya2022,
-	author		= "Yingni Guo and Eran Shmaya",
-	year		= "2021",
-	title		= "Regret-minimizing project choice",
-	note		= "working paper, 6 Jul 2022",
-	langid		= "american",
-}
-
 @unpublished{HaghpanahKuvalekarLipnowski2022,
 	author		= "Nima Haghpanah and Aditya Kuvalekar and Elliot Lipnowski",
-	year		= "2022",
-	title		= "Selling to a group",
-	note		= "working paper, 28 June 2022",
+	year		= "2023",
+	title		= "Buying from a group",
+	note		= "working paper, 8 June 2023",
 	langid		= "american",
 }
 
@@ -1975,6 +2029,14 @@ working papers
 	year		= "2016",
 	title		= "Implementation with quota mechanisms",
 	note		= "work in progress",
+	langid		= "american",
+}
+
+@unpublished{JeongPycia2023,
+	author		= "Byeong-hyeon Jeong and Marek Pycia",
+	year		= "2023",
+	title		= "The first-price principle of maximizing economic objectives",
+	note		= "working paper, Aug 2023",
 	langid		= "american",
 }
 
@@ -2013,21 +2075,11 @@ working papers
 	doi			= "10.2139/ssrn.3615398",
 }
 
-@unpublished{KattwinkelKnoepfle2022,
-	author		= "Deniz Kattwinkel and Jan Knoepfle",
-	year		= "2022",
-	title		= "Costless information and costly verification",
-	subtitle	= "A case for transparency",
-	note		= "working paper, 21 Jun 2022",
-	langid		= "american",
-	doi			= "10.1086/721618",
-}
-
 @unpublished{Laohakunakorn2019,
 	author		= "Krittanai Laohakunakorn",
-	year		= "2019",
+	year		= "2023",
 	title		= "Rent extraction with information acquisition",
-	note		= "working paper, 30 Dec 2019",
+	note		= "working paper, 7 Sep 2023",
 	langid		= "american",
 }
 
@@ -2067,7 +2119,7 @@ working papers
 	author		= "Paula Onuchic and Debraj Ray",
 	year		= "2022",
 	title		= "Conveying value via categories",
-	note		= "working paper, Oct 2022",
+	note		= "working paper, Dec 2022",
 	langid		= "american",
 }
 
@@ -2095,15 +2147,6 @@ working papers
 	title		= "Long term contracts",
 	note		= "working paper, {U}niversity of {W}arwick",
 	langid		= "american",
-}
-
-@unpublished{Sinander2022,
-	author		= "Ludvig Sinander",
-	year		= "2022",
-	title		= "The converse envelope theorem",
-	note		= "working paper, 20 Jun 2022",
-	langid		= "american",
-	doi			= "10.48550/arXiv.1909.11219",
 }
 
 
